{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 21,
  "lineage": "151c7704-ec62-61c4-3785-4d0dfeee228d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e4d6f8e1937b9ef",
            "association_id": "eipassoc-01b7f250ad0bfe351",
            "domain": "vpc",
            "id": "eipalloc-08e4d6f8e1937b9ef",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06b15b9b0d9e7cda4",
            "private_dns": "ip-10-0-1-232.ec2.internal",
            "private_ip": "10.0.1.232",
            "public_dns": "ec2-34-232-7-75.compute-1.amazonaws.com",
            "public_ip": "34.232.7.75",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "nat_eip-1"
            },
            "tags_all": {
              "name": "nat_eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.IGW-1",
            "aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_intance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:580234752977:instance/i-05ba5b57e255ff91e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ba5b57e255ff91e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09177e212829d9cab",
            "private_dns": "ip-10-0-1-82.ec2.internal",
            "private_ip": "10.0.1.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-026ace0bafa682a8f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b333b88a6d522ca0",
            "tags": {
              "name": "private_intance"
            },
            "tags_all": {
              "name": "private_intance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-058ee70784ed09590"
            ]
          },
          "dependencies": [
            "aws_security_group.security_group",
            "aws_subnet.private_subnets-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_intance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:580234752977:instance/i-06bfb9e9c48dc0be1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06bfb9e9c48dc0be1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-025464ef7741c56ec",
            "private_dns": "ip-10-0-0-32.ec2.internal",
            "private_ip": "10.0.0.32",
            "public_ip": "54.146.55.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05bd375e2e1632bb2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018f4a72b3357c1ce",
            "tags": {
              "name": "public_intance"
            },
            "tags_all": {
              "name": "public_intance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-058ee70784ed09590"
            ]
          },
          "dependencies": [
            "aws_security_group.security_group",
            "aws_subnet.public_subnets-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580234752977:internet-gateway/igw-063df010562287f5e",
            "id": "igw-063df010562287f5e",
            "owner_id": "580234752977",
            "tags": {
              "Name": "IGW-1"
            },
            "tags_all": {
              "Name": "IGW-1"
            },
            "vpc_id": "vpc-07d0872d2b5cfe549"
          },
          "dependencies": [
            "aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e4d6f8e1937b9ef",
            "connectivity_type": "public",
            "id": "nat-0e72a6a46eea14257",
            "network_interface_id": "eni-06b15b9b0d9e7cda4",
            "private_ip": "10.0.1.232",
            "public_ip": "34.232.7.75",
            "subnet_id": "subnet-0b333b88a6d522ca0",
            "tags": {
              "Name": "NATgw-1"
            },
            "tags_all": {
              "Name": "NATgw-1"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip-1",
            "aws_internet_gateway.IGW-1",
            "aws_subnet.private_subnets-1",
            "aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580234752977:route-table/rtb-0c0952f2f1fab2ef9",
            "id": "rtb-0c0952f2f1fab2ef9",
            "owner_id": "580234752977",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e72a6a46eea14257",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "Private_rt"
            },
            "tags_all": {
              "name": "Private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d0872d2b5cfe549"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.NATgw-1",
            "aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580234752977:route-table/rtb-0a22d9d65e89f3ad6",
            "id": "rtb-0a22d9d65e89f3ad6",
            "owner_id": "580234752977",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-063df010562287f5e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route table"
            },
            "tags_all": {
              "Name": "public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d0872d2b5cfe549"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW-1",
            "aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71cfd3b4db09dc9",
            "route_table_id": "rtb-0c0952f2f1fab2ef9",
            "subnet_id": "subnet-0b333b88a6d522ca0"
          },
          "dependencies": [
            "aws_eip.nat_eip-1",
            "aws_internet_gateway.IGW-1",
            "aws_nat_gateway.NATgw-1",
            "aws_route_table.Private_rt",
            "aws_subnet.private_subnets-1",
            "aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ca4698e4fa0eb46",
            "route_table_id": "rtb-0a22d9d65e89f3ad6",
            "subnet_id": "subnet-018f4a72b3357c1ce"
          },
          "dependencies": [
            "aws_internet_gateway.IGW-1",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets-1",
            "aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580234752977:security-group/sg-058ee70784ed09590",
            "description": "Allow limited external traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058ee70784ed09590",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 442,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 446
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "security_group",
            "name_prefix": "",
            "owner_id": "580234752977",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "security_group"
            },
            "tags_all": {
              "name": "security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d0872d2b5cfe549"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580234752977:subnet/subnet-0b333b88a6d522ca0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b333b88a6d522ca0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "580234752977",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnets-1"
            },
            "tags_all": {
              "Name": "private_subnets-1"
            },
            "vpc_id": "vpc-07d0872d2b5cfe549"
          },
          "dependencies": [
            "aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580234752977:subnet/subnet-018f4a72b3357c1ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018f4a72b3357c1ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "580234752977",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnets-1"
            },
            "tags_all": {
              "Name": "public_subnets-1"
            },
            "vpc_id": "vpc-07d0872d2b5cfe549"
          },
          "dependencies": [
            "aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:580234752977:vpc/vpc-07d0872d2b5cfe549",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/18",
            "default_network_acl_id": "acl-02451957ef09b4ffb",
            "default_route_table_id": "rtb-004175b9675dd5694",
            "default_security_group_id": "sg-068be0fc54e8dff02",
            "dhcp_options_id": "dopt-0d44f22f8bfda000b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07d0872d2b5cfe549",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-004175b9675dd5694",
            "owner_id": "580234752977",
            "tags": {
              "Name": "VPC-1"
            },
            "tags_all": {
              "Name": "VPC-1"
            }
          }
        }
      ]
    }
  ]
}